<resources>
    <string name="app_name">Сиам Сервис FREE</string>
    <string name="bluetooth_access_error">Модуль Bluetooth не установлен на телефоне</string>
    <string name="make_measurement">Произвести замер</string>
    <string name="measurements">Замеры</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>
    <string name="open_drawer">Открыть меню</string>
    <string name="close_drawer">Закрыть меню</string>
    <string name="about_application">О приложении</string>
    <string name="phone">Телефон</string>
    <string name="phone_number">+7 (3822) 90 00 08</string>
    <string name="web">Сайт</string>
    <string name="web_value">http://www.siamoil.ru/</string>
    <string name="address">Адрес</string>
    <string name="address_value">г. Томск, ул. Октябрьская, 10а.</string>
    <string name="email">VChurilov@integra.ru</string>
    <string name="company_latitude">56.493164</string>
    <string name="company_longitude">84.953885</string>
    <string name="company_description">ИЦ ООО "Сиам Мастер"</string>
    <string name="about_company">Компания</string>
    <string name="version_title">Версия приложения</string>
    <string name="version">0.0.1</string>
    <string name="mail_header">SIAM Service: Предложение по оптимизации</string>
    <string name="mailto">Отправлять замеры на почту</string>
    <string name="export_format">Формат экспорта</string>
    <string name="dbt">*.dbt , *.dbf</string>
    <string name="e">*.e , *.d</string>
    <string name="saved">Сохранено</string>
    <string name="no_device">Устройство не настроено</string>
    <string name="connected">Соединение установлено</string>
    <string name="connecting">Подключение…</string>
    <string name="connection_lost">Нет соединения</string>
    <string name="no_device_info">Настройте bluetooth-соединение с устройством</string>
    <string name="connection_lost_info">Потеряно bluetooth-соединение с устройством</string>
    <string name="find_new_device">Поиск новых устройств</string>
    <string name="bluetooth_area">Bluetooth окружение</string>
    <string name="paired">Сопряженные</string>
    <string name="new_device">Новые</string>
</resources>
