<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_item_make"
            android:checked="true"
            android:icon="@drawable/ic_settings_remote_24dp"
            android:title="@string/make_measurement" />
        <item
            android:id="@+id/nav_item_measurements"
            android:checked="true"
            android:icon="@drawable/ic_storage_24dp"
            android:title="@string/measurements" />
        <item
            android:id="@+id/nav_item_settings"
            android:checked="true"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_item_about"
            android:checked="true"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/about" />
    </group>
</menu>