<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_settings"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="5dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar"
                app:title="@string/settings"
                app:titleTextColor="@color/white"
                app:navigationIcon="@drawable/ic_arrow_back_24dp"
                />

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                >

                <LinearLayout
                    style="@style/AboutAppLinearLayout"
                    >

                    <ImageView
                        style="@style/AboutApplicationImageView"
                        android:src="@drawable/ic_mail_24dp"
                        android:tint="@color/black"
                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        >

                        <EditText
                            android:id="@+id/mail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mailto"
                            android:text="@string/mailto"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size"
                            android:inputType="textEmailAddress"
                            />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/export_format"/>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical"
                        >

                        <RadioButton
                            android:id="@+id/dbt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dbt"
                            android:textColor="@color/black"
                            />

                        <RadioButton
                            android:id="@+id/e"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/e"
                            android:textColor="@color/black"
                            />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
